--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,5 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<% if user_signed_in? %>
+  <h1>Welcome <%= current_user.email %></h1>
+<% else %>
+  <h1>Welcome. Sign in to continue.</h1>
+<% end %>
